--- a/CRUD-Bootstrapv5-JavaScript-Local-Storage-main/style.css
+++ b/CRUD-Bootstrapv5-JavaScript-Local-Storage-main/style.css
@@ -1,96 +1,159 @@
-/* Google Fonts - Poppins */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
-* {
+/* Import Google font - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-body {
-  min-height: 100vh;
+body{
   display: flex;
+  padding: 0 10px;
+  min-height: 100vh;
+  background: #0D6EFD;
   align-items: center;
   justify-content: center;
-  background: #4070f4;
 }
-.container {
-  position: relative;
-  max-width: 370px;
-  width: 100%;
-  padding: 25px;
-  border-radius: 8px;
-  background-color: #fff;
+::selection{
+  color: #fff;
+  background: #0D6EFD;
 }
-.container header {
+.wrapper{
+  width: 715px;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 10px 10px 10px rgba(0,0,0,0.05);
+}
+.wrapper header{
   font-size: 22px;
   font-weight: 600;
-  color: #333;
+  padding: 20px 30px;
+  border-bottom: 1px solid #ccc;
 }
-.container form {
-  margin-top: 30px;
+.wrapper form{
+  margin: 35px 30px;
 }
-form .field {
-  margin-bottom: 20px;
+.wrapper form.disabled{
+  pointer-events: none;
+  opacity: 0.7;
 }
-form .input-field {
+form .dbl-field{
+  display: flex;
+  margin-bottom: 25px;
+  justify-content: space-between;
+}
+.dbl-field .field{
+  height: 50px;
+  display: flex;
   position: relative;
-  height: 55px;
-  width: 100%;
+  width: calc(100% / 2 - 13px);
 }
-.input-field input {
-  height: 100%;
-  width: 100%;
-  outline: none;
-  border: none;
-  border-radius: 8px;
-  padding: 0 15px;
-  border: 1px solid #d1d1d1;
-}
-.invalid input {
-  border-color: #d93025;
-}
-.input-field .show-hide {
+.wrapper form i{
   position: absolute;
-  right: 13px;
   top: 50%;
+  left: 18px;
+  color: #ccc;
+  font-size: 17px;
+  pointer-events: none;
   transform: translateY(-50%);
-  font-size: 18px;
-  color: #919191;
-  cursor: pointer;
-  padding: 3px;
 }
-.field .error {
+form .field input,
+form .message textarea{
+  width: 100%;
+  height: 100%;
+  outline: none;
+  padding: 0 18px 0 48px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+.field input::placeholder,
+.message textarea::placeholder{
+  color: #ccc;
+}
+.field input:focus,
+.message textarea:focus{
+  padding-left: 47px;
+  border: 2px solid #0D6EFD;
+}
+.field input:focus ~ i,
+.message textarea:focus ~ i{
+  color: #0D6EFD;
+}
+form .message{
+  position: relative;
+}
+form .message i{
+  top: 30px;
+  font-size: 20px;
+}
+form .message textarea{
+  min-height: 130px;
+  max-height: 230px;
+  max-width: 100%;
+  min-width: 100%;
+  padding: 15px 20px 0 48px;
+}
+form .message textarea::-webkit-scrollbar{
+  width: 0px;
+}
+.message textarea:focus{
+  padding-top: 14px;
+}
+form .button-area{
+  margin: 25px 0;
   display: flex;
   align-items: center;
-  margin-top: 6px;
-  color: #d93025;
-  font-size: 13px;
+}
+.button-area button{
+  color: #fff;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 13px 25px;
+  background: #0D6EFD;
+  transition: background 0.3s ease;
+}
+.button-area button:hover{
+  background: #025ce3;
+}
+.button-area span{
+  font-size: 17px;
+  margin-left: 30px;
   display: none;
 }
-.invalid .error {
-  display: flex;
-}
-.error .error-icon {
-  margin-right: 6px;
-  font-size: 15px;
-}
-.create-password .error {
-  align-items: flex-start;
-}
-.create-password .error-icon {
-  margin-top: 4px;
-}
-.button {
-  margin: 25px 0 6px;
-}
-.button input {
-  color: #fff;
-  font-size: 16px;
-  font-weight: 400;
-  background-color: #4070f4;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-.button input:hover {
-  background-color: #0e4bf1;
+@media (max-width: 600px){
+  .wrapper header{
+    text-align: center;
+  }
+  .wrapper form{
+    margin: 35px 20px;
+  }
+  form .dbl-field{
+    flex-direction: column;
+    margin-bottom: 0px;
+  }
+  form .dbl-field .field{
+    width: 100%;
+    height: 45px;
+    margin-bottom: 20px;
+  }
+  form .message textarea{
+    resize: none;
+  }
+  form .button-area{
+    margin-top: 20px;
+    flex-direction: column;
+  }
+  .button-area button{
+    width: 100%;
+    padding: 11px 0;
+    font-size: 16px;
+  }
+  .button-area span{
+    margin: 20px 0 0;
+    text-align: center;
+  }
 }
