--- a/CRUD-Bootstrapv5-JavaScript-Local-Storage-main/style.css
+++ b/CRUD-Bootstrapv5-JavaScript-Local-Storage-main/style.css
@@ -76,6 +76,7 @@ form button:hover{
 }
 form .textarea-field .item{
     resize: none;
+    width: 300px;
 }
 form .textarea-field .error-txt{
     margin-top: -10px;
