--- a/styles.css
+++ b/styles.css
@@ -374,18 +374,19 @@ footer {
   font-family: "Tajawal", sans-serif;
 }
 .menu-button:hover{
-  background-color: transparent;
+  background-color: red;
   border: 1px;
   border-radius: 15px;
 }
 .right-menu{
+  background-color: transparent;
   position:relative;
   display: inline-block;
 }
 .dropdown-menu{
   display: none;
   position: absolute;
-  background-color: #aa9090;
+  background-color: #8b81e9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
