--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ nav .nav-link:hover {
 }
 
 .hero-section .content h4 {
-  color: green;
+  color: black;
   font-size: 1.6rem;
   margin-bottom: 1rem;
 }
